@@ -20,4 +20,5 @@ with contributions by:
     Christian Forster <forster@like.e-technik.uni-erlangen.de>
     John Deeny <taqueso@dilapidated.org>
     Robert Lunnon <bobl@optushome.com.au>
+    Enrico Ardizzoni <craken@users.sourceforge.net>
 
